# stunning-octo-waffle

./: .gitignore  README.md  SECURITY.md  compose.yml
keycloak-realm-config/: sow-realm.json
sow-api/: Dockerfile  README.md  pyproject.toml
sow-api/app/: auth.py  main.py  models.py
sow-api/tests/: test_api.py
sow-app/: .env  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
sow-app/src/: App.tsx  main.tsx
